fix mobile alignment

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -340,7 +340,7 @@
   backdrop-filter:blur(22px);
   transition:.3s;
 
-  margin-bottom:20px;
+  margin-bottom:10px;
 }
 
 .icon {
@@ -354,7 +354,7 @@
 }
 
 .track-line{
-    top:102px;
+    top:75px;
 }
 
 .node-dot {
@@ -366,7 +366,7 @@
 
   position:absolute;
 
-  top:102px;
+  top:75px;
   transform:translateY(-50%);
 
   box-shadow:
